# routes/routes.go
@@ -10,4 +10,6 @@ func Setup(app *fiber.App) {
 	// Ping
 	app.Get("/api/ping", controllers.GetPing)
 
+	// Bayi
+	app.Post("/api/newborn-data", controllers.CreateNewbornData)
 }
